major update bugs betslips, added complaints, betslip additions, 2 up bug fix
