# config/routes.rb
@@ -41,7 +41,9 @@ Rails.application.routes.draw do
       match "bets" => "bets#index", :via => [:get]
       match "deposit" => "deposits#create", :via => [:post]
       match "withdraw" => "withdraws#create", :via => [:post]
-      
+      match "complaints" => "complaints#create", :via => [:post]
+      match "complaints/:id" => "complaints#show", :via => [:get]
+
     end
   end
 
